--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,5 +1,5 @@
 ublue_variants:
-  - label: blue-build/template
+  - label: akippnn/hyprland-atomic
     ks: /kickstart/ublue-os.ks
     flavors:
-      - label: blue-build/template
+      - label: hyprland-atomic
