--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,14 +1,11 @@
-# image will be published to ghcr.io/<user>/<name>
+# image will be published to ghcr.io/akippnn/hyprland-atomic
 name: hyprland-atomic
-# description will be included in the image's metadata
 description: Immutable Hyprland with batteries included
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/base-main
-image-version: 39 # latest is also supported if you want new updates ASAP
+image-version: 39 # NOTE: change "fedora-39" string for image-version changes
 
-# module configuration, executed in order
-# you can include multiple instances of the same module
 modules:
   - type: files
     files:
@@ -17,11 +14,37 @@ modules:
           # put configuration files you want in /etc/ on a booted system 
           # in /usr/etc/ in the image. read more in files module reference.
 
+  # NOTE: change "fedora-39" string for image-version changes
   - type: rpm-ostree
-    repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+    repos:
+      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-39/atim-starship-fedora-39.repo # starship cross-shell prompt
+      - https://copr.fedorainfracloud.org/coprs/tofik/nwg-shell/repo/fedora-39/tofik-nwg-shell-fedora-39.repo # nwg desktop shell
+      - https://copr.fedorainfracloud.org/coprs/solopasha/hyprland/repo/fedora-39/solopasha-hyprland-fedora-39.repo # other goodies (hypr apps, plugins, tools, etc.)
     install:
-      # - micro
-      # - starship
+      - fish
+      - starship
+      - tuigreet
+      - hyprland
+      - hyprpicker
+      - hyprshot
+      - mako
+      - rofi-wayland
+      - xdg-desktop-portal
+      - xdg-desktop-portal-gtk
+      - xdg-desktop-portal-hyprland
+      - polkit
+      - polkit-gnome
+      - wl-clipboard
+      - nemo
+      - file-roller
+      - nemo-audio-tab
+      - blueman-nemo
+      - nemo-compare
+      - nemo-fileroller
+      - nemo-preview
+      - nemo-seahorse
+      - seahorse
+      - gnome-software
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
@@ -35,6 +58,8 @@ modules:
       # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
         - org.mozilla.firefox
+        - io.github.flattool.Warehouse
+        - org.gnome.Loupe
         # - org.gnome.Loupe
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
         # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
